
name:               ludolib
version:            0.0.1
synopsis:           A library of game utilities.
homepage:           https://github.com/Lokathor/ludolib
license:            AGPL
license-file:       LICENSE.txt
author:             Lokathor
maintainer:         zefria@gmail.com
category:           Game, Utils
build-type:         Simple
extra-source-files: README.md
cabal-version:      >=1.10

library
    hs-source-dirs:     src
    exposed-modules:    Data.PCGen
                        Data.Location2
                        Control.RNG
                        Util.PPFOV
    build-depends:      base,
                        random,
                        MonadRandom,
                        containers
    default-language:   Haskell2010
    other-extensions:   CPP,
                        ConstraintKinds
    if arch(x86_64)
        cpp-options: -DSixtyFourBit

test-suite tests
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Tests.hs
    other-modules:      Data.PCGenTests
    build-depends:      hspec,
                        QuickCheck,
                        ludolib,
                        base,
                        random,
                        MonadRandom
    default-language:   Haskell2010

--executable roguelike-hs
--    main-is:            Main.hs
--    hs-source-dirs:     src
--    default-language:   Haskell2010
--    build-depends:      roguelike-hs
--    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
