
name:               ludolib
version:            0.0.3
synopsis:           A library of game utilities.
homepage:           https://github.com/Lokathor/ludolib
license:            AGPL
license-file:       AGPL.txt
author:             Lokathor
maintainer:         zefria@gmail.com
category:           Game, Utils
build-type:         Simple
extra-source-files: README.md
cabal-version:      >=1.10

library
    hs-source-dirs:     src
    exposed-modules:    Data.PCGen
                        Data.Location
                        Control.RNG
                        Control.Loops
                        Util.PPFOV
    build-depends:      base,
                        random,
                        MonadRandom,
                        containers
    default-language:   Haskell2010
    other-extensions:   CPP,
                        ConstraintKinds
    if arch(x86_64)
        cpp-options: -DSixtyFourBit
    --ghc-options:        -ddump-to-file -ddump-prep -ddump-simpl -ddump-simpl-iterations

executable ludobench
    main-is:            LudoBench.hs
    hs-source-dirs:     test
    default-language:   Haskell2010
    build-depends:      base,
                        ludolib,
                        criterion,
                        deepseq,
                        containers
    ghc-options:        -O2
                        -- -ddump-to-file -ddump-prep -ddump-simpl -ddump-simpl-iterations

test-suite tests
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Tests.hs
    other-modules:      Data.PCGenTests
    build-depends:      hspec,
                        QuickCheck,
                        ludolib,
                        base,
                        random,
                        MonadRandom
    default-language:   Haskell2010
