
name:               ludolib
version:            0.0.4
synopsis:           A library of game utilities.
homepage:           https://github.com/Lokathor/ludolib
license:            AGPL
license-file:       AGPL.txt
author:             Lokathor
maintainer:         zefria@gmail.com
category:           Game, Utils
build-type:         Simple
extra-source-files: README.md
cabal-version:      >=1.10

library
    default-language:   Haskell2010
    hs-source-dirs:     src
    exposed-modules:    Data.PCGen
                        Data.Location
                        Control.RNG
                        Control.Loops
                        Util.PPFOV
                        --Util.PPFOVNext
    build-depends:      base,
                        random,
                        MonadRandom,
                        containers,
                        ghc-prim
    other-extensions:   CPP,
                        ConstraintKinds,
                        MagicHash,
                        BangPatterns
    if arch(x86_64)
        cpp-options: -DSixtyFourBit
    --ghc-options:        -ddump-to-file -ddump-prep -ddump-simpl -ddump-simpl-iterations

executable ludobench
    default-language:   Haskell2010
    main-is:            LudoBench.hs
    hs-source-dirs:     test
    build-depends:      base,
                        ludolib,
                        criterion,
                        deepseq,
                        containers,
                        mtl,
                        random
    ghc-options:        -O2
                        -- -ddump-to-file -ddump-prep -ddump-simpl -ddump-simpl-iterations

test-suite alltests
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Tests.hs
    other-modules:      Data.PCGenTests
                        Control.RNGTests
                        Util.PPFOVTests
    build-depends:      hspec,
                        QuickCheck,
                        ludolib,
                        base,
                        random,
                        MonadRandom,
                        containers,
                        mtl
    if arch(x86_64)
        cpp-options: -DSixtyFourBit

